# openamulet

./: .clang-format  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  INSTALL  Makefile.am  README.md  acconfig.h  autogen.sh  changes.htm  configure.in  mkinstalldirs  readme.txt
header/amulet/: Makefile.am  am_io.h  am_strstream.h  am_value.hpp  am_wrapper.hpp  anim.h  b_order.h  connection.h  console.h  debugger.h  directory.hpp  dynarray.h  fborder_Big.h  formula.h  formula_advanced.h  gdefs.h  gem.h  gemG.h  gemG_time.h  gemM.h  gemW.h  gemW_32.h  gemW_clean.h  gemW_cursor.h  gemW_draw.h  gemW_image.h  gemW_input.h  gemW_line.h  gemW_misc.h  gemW_points.h  gemW_regions.h  gemW_styles.h  gemW_text.h  gemW_thunk32.h  gemW_time.h  gemX.h  gemX_time.h  gem_GIF.h  gem_image.h  gest_impl.h  (+42 more)
samples/: CMakeLists.txt  av.cpp  checkers.cpp  color.cpp  hsv.cpp  netpong.cpp  pong.cpp  space.cpp  space2.cpp  tree.cpp
samples/agate/: CMakeLists.txt  agate.cpp  gdp.cl  gdp_noex.cl
samples/circuit/: CMakeLists.txt  and.xbm  arrow01.xbm  circuit.cl  circuit.cpp  features  flip_flop.cir  full_adder.cir  not.xbm  one.xbm  or.xbm  question.xbm  xor.xbm  zero.xbm
samples/examples/: CMakeLists.txt  example1.cpp  example1.sav  example1mu.cpp  example2.cpp  example2db.cpp  example2db.h  example2db.sav  goodbye_button.cpp  goodbye_inter.cpp  hello.cpp
samples/gilt/: CMakeLists.txt  Conflict_Window.cpp  Conflict_Window.h  aboutgilt.cpp  aboutgilt.sav  borderrect.cpp  borderrect.sav  constraint.cpp  constraint.h  cpp_out.cpp  externs.cpp  externs.h  gilt.cpp  imagelabel.cpp  menuedit.cpp  modified_selection_widget.cpp  namelabel.cpp  namelabel.sav  nameonly.cpp  nameonly.sav  numberinput.cpp  numberinput.sav  offset_percentage.cpp  offset_percentage.h  outline.cpp  outline.h  panel.cpp  panel.h  savecpp.cpp  savecpp.h  savecpp.sav  scrollgroup.cpp  scrollgroup.sav
samples/tutorial/: CMakeLists.txt  tutorial.cpp
source/: Makefile.am
source/anim/: Makefile.am  anim_animators.cpp  anim_constraint.cpp  anim_interactor.cpp
source/debug/: Makefile.am  input_parser.cpp  inspector.cpp  tracer.cpp
source/gem/: Makefile.am  console.cpp  gem_GIF.cpp  gem_keytrans.cpp  gem_points.cpp
source/gesture/: Makefile.am  gest_classifier.cpp  gest_features.cpp  gest_matrix.cpp  gest_trainer.cpp  inter_gesture.cpp
source/inter/: Makefile.am  command.cpp  command_basics.cpp  commands_other.cpp  inter_basics.cpp  inter_choice.cpp  inter_globals.cpp  inter_location.cpp  inter_move_grow.cpp  inter_new_points.cpp  inter_text.cpp  multiple_undo.cpp  single_undo.cpp  undo_handler.cpp  user_id.cpp
source/net/: connection.cpp  def_net_methods.cpp  fborder_Little.cpp  netmap.cpp  network.cpp
source/object/: Makefile.am  dynarray.cpp  dynarray_default.cpp  dynarray_smartheap.cpp  dynmm.cpp  dynmm_default.cpp  formula.cpp  object.cpp  object_data.cpp  web.cpp
source/opal/: color_conversion.cpp  constraints.cpp  constraints_alignment.cpp  constraints_with_arguments.cpp  event_timing.cpp  load_save.cpp  opal.cpp  opal_code.cpp  opal_operations.cpp  slot_names.cpp  state_store.cpp  styles.cpp  text_functions.cpp  window_todo.cpp
source/scripting/: askclickpos.cpp  askforvalue.cpp  askpositionandsize.cpp  askpositionorsize.cpp  askselectobj.cpp  generalizers.cpp  genval.cpp  invoke.cpp  locgen.cpp  objgen.cpp  scripting_window.cpp  search_window.cpp  undo_dialog_box.cpp  valgen.cpp  valinvokegen.cpp
source/utils/: am_enum_support.cpp  am_load_save.cpp  am_method_wrapper.cpp  am_string.cpp  am_value.cpp  am_wrapper.cpp  directory.cpp  filefind.cpp  initializer.cpp  misc.cpp  priority_list.cpp  registered_type.cpp  registry.cpp  standard_slots.cpp  stdvalue.cpp  switchboard.cpp  symbol_table.cpp  types.cpp  univ_lst.cpp  univ_map.cpp  value_list.cpp
source/widgets/: Makefile.am  border_misc.cpp  button_commands.cpp  button_draw.cpp  button_widgets.cpp  dialog_widgets.cpp  editing_commands.cpp  listbox_widget.cpp  rich_text.cpp  scroll_widgets.cpp  selection_widgets.cpp  text_widgets.cpp  widget_globals.cpp  widgets.cpp
src/: CMakeLists.txt
src/anim/: anim_animators.cpp  anim_constraint.cpp  anim_interactor.cpp
src/debug/: input_parser.cpp  inspector.cpp  tracer.cpp
src/gem/: gem_GIF.cpp  gem_keytrans.cpp  gem_points.cpp
src/gesture/: gest_classifier.cpp  gest_features.cpp  gest_matrix.cpp  gest_trainer.cpp  inter_gesture.cpp
src/inter/: command_basics.cpp  commands_other.cpp  inter_basics.cpp  inter_location.cpp  inter_move_grow.cpp  inter_new_points.cpp  inter_text.cpp  multiple_undo.cpp  user_id.cpp
src/net/: connection.cpp  def_net_methods.cpp  network.cpp
src/object/: dynarray.cpp  dynmm.cpp  formula.cpp  object.cpp  object_data.cpp  web.cpp
src/opal/: color_conversion.cpp  constraints.cpp  constraints_with_arguments.cpp  event_timing.cpp  load_save.cpp  opal.cpp  opal_code.cpp  opal_operations.cpp  slot_names.cpp  state_store.cpp  styles.cpp  text_functions.cpp  window_todo.cpp
src/scripting/: askpositionandsize.cpp  askselectobj.cpp  generalizers.cpp  genval.cpp  invoke.cpp  locgen.cpp  objgen.cpp  scripting_window.cpp  search_window.cpp  undo_dialog_box.cpp
src/utils/: am_enum_support.cpp  am_load_save.cpp  am_string.cpp  am_value.cpp  directory.cpp  filefind.cpp  initializer.cpp  misc.cpp  priority_list.cpp  registry.cpp  standard_slots.cpp  stdvalue.cpp  switchboard.cpp  symbol_table.cpp  types.cpp  univ_map.cpp  value_list.cpp
src/widgets/: button_commands.cpp  button_draw.cpp  button_widgets.cpp  dialog_widgets.cpp  editing_commands.cpp  listbox_widget.cpp  panel_code.cpp  rich_text.cpp  scroll_widgets.cpp  selection_widgets.cpp  text_widgets.cpp  widget_globals.cpp  widgets.cpp  widgets_code.cpp
test/gem/: CMakeLists.txt  Makefile.am  testMS1.cpp  test_utils.cpp  test_utils.h  testbits.cpp  testclip.cpp  testcolor.cpp  testcopy.cpp  testdpy.cpp  testfonts.cpp  testgem.cpp  testinput.cpp  testlineprops.cpp  testloop.cpp  testpixmap.cpp  testpoints.cpp  testsubwins.cpp  testtrans.cpp  testwinprops.cpp  testwinsizes.cpp
test/net/: CMakeLists.txt  Makefile.am  (+7 more)
(+758 files in other folders)
