PROJECT(open_amulet CXX)
CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

# This needs to be in the root CMakeLists.txt.
ENABLE_TESTING()

LIST(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake/modules")
INCLUDE(AddCXXCompilerFlag)

IF(UNIX)
    FIND_PACKAGE(X11 REQUIRED)
    INCLUDE_DIRECTORIES(${X11_INCLUDE_DIR})
ENDIF()

INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/header)

# ADD_CXX_COMPILER_FLAG(-Wall)
ADD_CXX_COMPILER_FLAG(-Wno-reorder)
ADD_CXX_COMPILER_FLAG(-Wno-logical-op-parentheses)
ADD_CXX_COMPILER_FLAG(-Wno-shift-op-parentheses)
ADD_CXX_COMPILER_FLAG(-Wno-invalid-source-encoding)
ADD_CXX_COMPILER_FLAG(-Wno-c++11-extensions)
ADD_CXX_COMPILER_FLAG(-Wno-deprecated-declarations)

ADD_DEFINITIONS(-DMEMORY)

SET(OPEN_AMULET_VERSION_MAJOR 4)
SET(OPEN_AMULET_VERSION_MINOR 4)
SET(OPEN_AMULET_VERSION_PATCH 0)
SET(OPEN_AMULET_VERSION "${OPEN_AMULET_VERSION_MAJOR}.${OPEN_AMULET_VERSION_MINOR}.${OPEN_AMULET_VERSION_PATCH}")

# clang doesn't print colored diagnostics when invoked from Ninja
IF (UNIX AND
    CMAKE_CXX_COMPILER_ID STREQUAL "Clang" AND
    CMAKE_GENERATOR STREQUAL "Ninja")
  SET(CMAKE_CXX_FLAGS "-fcolor-diagnostics ${CMAKE_CXX_FLAGS}")
ENDIF()

ADD_SUBDIRECTORY(source)
ADD_SUBDIRECTORY(test)

# INCLUDE(${CMAKE_SOURCE_DIR}/cmake/PackagingConfig.cmake)
