PROJECT(open_amulet C CXX)
CMAKE_MINIMUM_REQUIRED(VERSION 3.1)
SET(CMAKE_CXX_STANDARD 11)

# This needs to be in the root CMakeLists.txt.
ENABLE_TESTING()

LIST(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake/modules")
INCLUDE(AddCXXCompilerFlag)

IF(UNIX)
    FIND_PACKAGE(X11 REQUIRED)
    INCLUDE_DIRECTORIES(${X11_INCLUDE_DIR})
ENDIF()

INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/include)

# ADD_CXX_COMPILER_FLAG(-Wall)
ADD_CXX_COMPILER_FLAG(-Wno-reorder)
ADD_CXX_COMPILER_FLAG(-Wno-logical-op-parentheses)
ADD_CXX_COMPILER_FLAG(-Wno-invalid-source-encoding)
ADD_CXX_COMPILER_FLAG(-Wno-deprecated)

ADD_DEFINITIONS(-DMEMORY)

SET(OPEN_AMULET_VERSION_MAJOR 4)
SET(OPEN_AMULET_VERSION_MINOR 4)
SET(OPEN_AMULET_VERSION_PATCH 0)
SET(OPEN_AMULET_VERSION "${OPEN_AMULET_VERSION_MAJOR}.${OPEN_AMULET_VERSION_MINOR}.${OPEN_AMULET_VERSION_PATCH}")

# gcc and clang don't print colored diagnostics when invoked from Ninja
IF (UNIX AND CMAKE_GENERATOR STREQUAL "Ninja")
  IF (CMAKE_CXX_COMPILER_ID STREQUAL "Clang")
    SET(CMAKE_CXX_FLAGS "-fcolor-diagnostics ${CMAKE_CXX_FLAGS}")
  ENDIF()
  # This doesn't work on gcc 4.6 which is what is on TravisCI.
  # IF (CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
  #   SET(CMAKE_CXX_FLAGS "-fdiagnostics-color ${CMAKE_CXX_FLAGS}")
  # ENDIF()
ENDIF()

ADD_SUBDIRECTORY(src)
ADD_SUBDIRECTORY(samples)
ADD_SUBDIRECTORY(test)

# INCLUDE(${CMAKE_SOURCE_DIR}/cmake/PackagingConfig.cmake)
