SUBDIRS = impl

amuletincludedir = $(includedir)/amulet

amuletinclude_HEADERS = am_io.h am_strstream.h am_value.hpp \
am_wrapper.hpp anim.h b_order.h connection.h console.h debugger.h \
directory.hpp dynarray.h fborder_Big.h fborder_Little.h formula.h \
formula_advanced.h gdefs.h gem.h gemG.h gemG_time.h gemM.h gemW.h \
gemW_32.h gemW_bmpimage.h gemW_clean.h gemW_cursor.h gemW_draw.h \
gemW_gifimage.h gemW_image.h gemW_input.h gemW_line.h \
gemW_misc.h gemW_pattern.h gemW_points.h gemW_regions.h gemW_styles.h \
gemW_text.h gemW_thunk32.h gemW_time.h gemW_winimage.h gemX.h \
gemX_time.h gem_GIF.h gem_image.h gest_impl.h gest_matrix.h gesture.h \
idefs.h impl.h initializer.h inter.h inter_advanced.h \
listbox_widget.hpp listbox_widget_abc.hpp misc.h network.h object.h \
object_advanced.h object_data.hpp opal.h opal_advanced.h opal_inlines.h \
opal_intnl.h priority_list.h referee.hpp registered_type.hpp registry.h \
rich_text.h romkantab.h scripting.h scripting_advanced.h socket_stubs.h \
standard_slots.h stdvalue.h symbol_table.h text_fns.h typedefs.hpp \
types.h undo_dialog.h univ_lst.h univ_lst.hpp univ_map.h univ_map.hpp \
univ_map_oa.hpp value_list.h web.h widgets.h widgets_advanced.h \
widgets_intnl.h wrapper.hpp filefind.h

