ADD_EXECUTABLE(testJIO testJIO.cpp)
TARGET_LINK_LIBRARIES(testJIO openamulet)

ADD_EXECUTABLE(testcoord testcoord.cpp)
TARGET_LINK_LIBRARIES(testcoord openamulet)

ADD_EXECUTABLE(testcursor testcursor.cpp)
TARGET_LINK_LIBRARIES(testcursor openamulet)

ADD_EXECUTABLE(testfade testfade.cpp)
TARGET_LINK_LIBRARIES(testfade openamulet)

ADD_EXECUTABLE(testflip testflip.cpp)
TARGET_LINK_LIBRARIES(testflip openamulet)

ADD_EXECUTABLE(testgobs testgobs.cpp)
TARGET_LINK_LIBRARIES(testgobs openamulet)

ADD_EXECUTABLE(testlines testlines.cpp)
TARGET_LINK_LIBRARIES(testlines openamulet)

ADD_EXECUTABLE(testmap testmap.cpp)
TARGET_LINK_LIBRARIES(testmap openamulet)

ADD_EXECUTABLE(testoffset testoffset.cpp)
TARGET_LINK_LIBRARIES(testoffset openamulet)

ADD_EXECUTABLE(testopal testopal.cpp)
TARGET_LINK_LIBRARIES(testopal openamulet)

ADD_EXECUTABLE(testpolyweb testpolyweb.cpp)
TARGET_LINK_LIBRARIES(testpolyweb openamulet)
