check_PROGRAMS = testloadsave filesearching

TESTS = filesearching

testloadsave_SOURCES = testloadsave.cpp
##testmaps_SOURCES = testmaps.cpp
filesearching_SOURCES = filesearching.cpp

INCLUDES = -I$(top_srcdir)/header -I$(top_srcdir)/header/amulet
LDADD = ${top_builddir}/source/libamulet-develop.la

EXTRA_DIST = testmaps.cpp
