check_PROGRAMS = testdragdrop testwidgets \
 testrichtext testselectionwidget

testdragdrop_SOURCES = testdragdrop.cpp
testwidgets_SOURCES = testwidgets.cpp
testrichtext_SOURCES = testrichtext.cpp
testselectionwidget_SOURCES = testselectionwidget.cpp

INCLUDES = -I$(top_srcdir)/header -I$(top_srcdir)/header/amulet
LDADD = ${top_builddir}/source/libamulet.la
