am_scriptingdir = $(pkgdatadir)/images/scripting

am_scripting_DATA =  centerX.gif centerX.xbm centerY.gif centerY.xbm \
 leftin.gif leftin.xbm leftout.gif leftout.xbm \
 rightin.gif rightin.xbm rightout.gif rightout.xbm \
 topin.gif topin.xbm topout.gif topout.xbm \
 bottomin.gif bottomin.xbm bottomout.gif bottomout.xbm \
 heightdiff.gif heightdiff.xbm heightpercent.gif heightpercent.xbm \
 widthdiff.gif widthdiff.xbm widthpercent.gif widthpercent.xbm

EXTRA_DIST = $(am_scripting_DATA)
