SUBDIRS = scripting

am_imagesdir = $(pkgdatadir)/images

am_images_DATA = Am_med.gif aboutamulet.gif \
alien.bmp amside.gif amside2.gif amtiny.gif amulet.gif amuletside.xbm \
amulettiny.xbm arrow.gif arrow.xbm borg.gif borg.xbm borg_m.gif \
borg_mask.xbm bug.gif bugsmall.gif circle.xbm corrupt_ent.gif \
corrupt_eye10.gif crosshair.xbm crosshair_mask.xbm crsshr.gif \
crsshr_m.gif diamond.gif diamond.xbm dog.gif ds9.gif ds9.xbm ds9_m.gif \
ds9_mask.xbm ent.xbm ent_d.gif ent_d.xbm eye.gif eye1.gif \
eye10.gif eye11.gif eye12.gif eye13.gif eye14.gif eye15.gif eye16.gif \
eye17.gif eye18.gif eye19.gif eye2.gif eye20.gif eye21.gif eye22.gif \
eye23.gif eye24.gif eye3.gif eye4.gif eye5.gif eye6.gif eye7.gif \
eye8.gif eye9.gif fun.gif fun.xbm girl.gif grey.gif \
grey.xbm happy.gif happy.xbm happy_m.gif happy_mask.xbm hi.gif hi.xbm \
horse.gif kling.xbm line.xbm opaque_Am_med.gif \
opaque_amside.gif opaque_amside2.gif opaque_amtiny.gif opaque_amulet.gif \
opaque_arrow.gif opaque_bomb.gif opaque_borg.gif opaque_bug.gif \
opaque_bugsmall.gif opaque_crsshr.gif opaque_diamond.gif opaque_dog.gif \
opaque_ds9.gif opaque_ent.gif opaque_ent_d.gif opaque_eye.gif \
opaque_eye1.gif opaque_eye10.gif opaque_eye11.gif opaque_eye12.gif \
opaque_eye13.gif opaque_eye14.gif opaque_eye15.gif opaque_eye16.gif \
opaque_eye17.gif opaque_eye18.gif opaque_eye19.gif opaque_eye2.gif \
opaque_eye20.gif opaque_eye21.gif opaque_eye22.gif opaque_eye23.gif \
opaque_eye24.gif opaque_eye3.gif opaque_eye4.gif opaque_eye5.gif \
opaque_eye6.gif opaque_eye7.gif opaque_eye8.gif opaque_eye9.gif \
opaque_fun.gif opaque_girl.gif opaque_goodship.gif opaque_grey.gif \
opaque_happy.gif opaque_hi.gif opaque_horse.gif opaque_kling.gif \
opaque_rom.gif opaque_smile.gif opaque_spaceship.gif rect.xbm \
rom.gif rom.xbm rom_m.gif rom_mask.xbm scripting smile.gif smile.xbm

EXTRA_DIST = $(am_images_DATA)
